# MotorMC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  i dont know  libraries.txt  style.md
.github/workflows/: build.yml  cmake.yml
src/: main.h  motor.c  motor.d.h  motor.h
src/crypt/: cfb8.c  cfb8.h  random.c  random.h  rsa.c  rsa.h
src/io/: io.h
src/io/chat/: chat.c  chat.d.h  chat.h  translation.c  translation.d.h  translation.h
src/io/commands/: commands.c  commands.d.h  commands.h  graph.c  graph.d.h  graph.h
src/io/filesystem/: filesystem.c  filesystem.h
src/io/json/: mjson.c  mjson.h  mjson_private.h
src/io/logger/: logger.c  logger.h
src/io/nbt/: mnbt.c  mnbt.h  mnbt_private.h
src/io/packet/: packet.c  packet.h
src/jobs/: board.c  board.d.h  board.h  board_private.h  handlers.c  handlers.h  jobs.h
src/jobs/scheduler/: scheduler.c  scheduler.h
src/listening/: listening.c  listening.d.h  listening.h
src/listening/phd/: handshake.c  handshake.h  login.c  login.h  play.c  play.h  status.c  status.h
src/listening/socket/: socket.c  socket.h
src/plugin/: manager.c  manager.d.h  manager.h  plugin-header.h  plugin-header.py  plugin.h
src/plugin/api/: plugin.h
src/test/: tests.c  tests.h
src/util/: ansi_escapes.c  ansi_escapes.h  bit_stream.c  bit_stream.h  bit_vector.c  bit_vector.h  bitset.h  dll.c  dll.h  doubly_linked_list.c  doubly_linked_list.h  doublylinkedlist.c  doublylinkedlist.h  id_vector.c  id_vector.h  linked_list.c  linked_list.h  linkedlist.c  linkedlist.h  list.c  list.h  lock_util.h  long_encode.h  str_util.h  tree.c  tree.h  util.c  util.h  vector.c  vector.h
src/world/: positions.h  world.c  world.d.h  world.h  world_private.h
src/world/entity/: entity.c  entity.d.h  entity.h  entity_d.h
src/world/entity/living/: living.c  living.d.h  living.h
src/world/entity/living/player/: player.c  player.d.h  player.h
src/world/item/: item.c  item.d.h  item.h
src/world/item/recipe/: recipe.c  recipe.h
src/world/material/: biome_generator.py  biomes.c  biomes.h  block_check.py  block_entities.h  blocks.c  blocks.h  codec.c  codec.h  dimensions.c  dimensions.h  items.c  items.h  material.c  material.h  state_generator.py  state_modifiers.c  state_modifiers.h  states.c
src/world/material/tags/: blocks.c  entity_types.c  fluids.c  game_events.c  items.c  tags.h
src/world/material/util/: biome_generator.py  block_check.py  block_tags.py  gen_block_array.py  gen_block_tags.py  gen_item_array.py  item_generator.py  out.txt  select_with_tag.py  state_generator.py
